// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renders components/segmented/demo/basic.tsx extend context correctly 1`] = `
<div
  aria-label="segmented control"
  aria-orientation="horizontal"
  class="ant-segmented css-var-test-id"
  role="radiogroup"
  tabindex="0"
>
  <div
    class="ant-segmented-group"
  >
    <label
      class="ant-segmented-item ant-segmented-item-selected"
    >
      <input
        checked=""
        class="ant-segmented-item-input"
        name="test-id"
        type="radio"
      />
      <div
        class="ant-segmented-item-label"
        title="Daily"
      >
        Daily
      </div>
    </label>
    <label
      class="ant-segmented-item"
    >
      <input
        class="ant-segmented-item-input"
        name="test-id"
        type="radio"
      />
      <div
        class="ant-segmented-item-label"
        title="Weekly"
      >
        Weekly
      </div>
    </label>
    <label
      class="ant-segmented-item"
    >
      <input
        class="ant-segmented-item-input"
        name="test-id"
        type="radio"
      />
      <div
        class="ant-segmented-item-label"
        title="Monthly"
      >
        Monthly
      </div>
    </label>
    <label
      class="ant-segmented-item"
    >
      <input
        class="ant-segmented-item-input"
        name="test-id"
        type="radio"
      />
      <div
        class="ant-segmented-item-label"
        title="Quarterly"
      >
        Quarterly
      </div>
    </label>
    <label
      class="ant-segmented-item"
    >
      <input
        class="ant-segmented-item-input"
        name="test-id"
        type="radio"
      />
      <div
        class="ant-segmented-item-label"
        title="Yearly"
      >
        Yearly
      </div>
    </label>
  </div>
</div>
`;

exports[`renders components/segmented/demo/basic.tsx extend context correctly 2`] = `[]`;

exports[`renders components/segmented/demo/block.tsx extend context correctly 1`] = `
<div
  aria-label="segmented control"
  aria-orientation="horizontal"
  class="ant-segmented ant-segmented-block css-var-test-id"
  role="radiogroup"
  tabindex="0"
>
  <div
    class="ant-segmented-group"
  >
    <label
      class="ant-segmented-item ant-segmented-item-selected"
    >
      <input
        checked=""
        class="ant-segmented-item-input"
        name="test-id"
        type="radio"
      />
      <div
        class="ant-segmented-item-label"
        title="123"
      >
        123
      </div>
    </label>
    <label
      class="ant-segmented-item"
    >
      <input
        class="ant-segmented-item-input"
        name="test-id"
        type="radio"
      />
      <div
        class="ant-segmented-item-label"
        title="456"
      >
        456
      </div>
    </label>
    <label
      class="ant-segmented-item"
    >
      <input
        class="ant-segmented-item-input"
        name="test-id"
        type="radio"
      />
      <div
        class="ant-segmented-item-label"
        title="longtext-longtext-longtext-longtext"
      >
        longtext-longtext-longtext-longtext
      </div>
    </label>
  </div>
</div>
`;

exports[`renders components/segmented/demo/block.tsx extend context correctly 2`] = `[]`;

exports[`renders components/segmented/demo/componentToken.tsx extend context correctly 1`] = `
Array [
  <div
    aria-label="segmented control"
    aria-orientation="horizontal"
    class="ant-segmented css-var-test-id"
    role="radiogroup"
    tabindex="0"
  >
    <div
      class="ant-segmented-group"
    >
      <label
        class="ant-segmented-item ant-segmented-item-selected"
      >
        <input
          checked=""
          class="ant-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="Daily"
        >
          Daily
        </div>
      </label>
      <label
        class="ant-segmented-item"
      >
        <input
          class="ant-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="Weekly"
        >
          Weekly
        </div>
      </label>
      <label
        class="ant-segmented-item"
      >
        <input
          class="ant-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="Monthly"
        >
          Monthly
        </div>
      </label>
      <label
        class="ant-segmented-item"
      >
        <input
          class="ant-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="Quarterly"
        >
          Quarterly
        </div>
      </label>
      <label
        class="ant-segmented-item"
      >
        <input
          class="ant-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="Yearly"
        >
          Yearly
        </div>
      </label>
    </div>
  </div>,
    ,
  <div
    aria-label="segmented control"
    aria-orientation="horizontal"
    class="ant-segmented css-var-test-id"
    role="radiogroup"
    tabindex="0"
  >
    <div
      class="ant-segmented-group"
    >
      <label
        class="ant-segmented-item ant-segmented-item-selected"
      >
        <input
          checked=""
          class="ant-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="Daily"
        >
          Daily
        </div>
      </label>
      <label
        class="ant-segmented-item"
      >
        <input
          class="ant-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="Weekly"
        >
          Weekly
        </div>
      </label>
      <label
        class="ant-segmented-item"
      >
        <input
          class="ant-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="Monthly"
        >
          Monthly
        </div>
      </label>
      <label
        class="ant-segmented-item"
      >
        <input
          class="ant-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="Quarterly"
        >
          Quarterly
        </div>
      </label>
      <label
        class="ant-segmented-item"
      >
        <input
          class="ant-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="Yearly"
        >
          Yearly
        </div>
      </label>
    </div>
  </div>,
]
`;

exports[`renders components/segmented/demo/componentToken.tsx extend context correctly 2`] = `[]`;

exports[`renders components/segmented/demo/controlled.tsx extend context correctly 1`] = `
<div
  aria-label="segmented control"
  aria-orientation="horizontal"
  class="ant-segmented css-var-test-id"
  role="radiogroup"
  tabindex="0"
>
  <div
    class="ant-segmented-group"
  >
    <label
      class="ant-segmented-item ant-segmented-item-selected"
    >
      <input
        checked=""
        class="ant-segmented-item-input"
        name="test-id"
        type="radio"
      />
      <div
        class="ant-segmented-item-label"
        title="Map"
      >
        Map
      </div>
    </label>
    <label
      class="ant-segmented-item"
    >
      <input
        class="ant-segmented-item-input"
        name="test-id"
        type="radio"
      />
      <div
        class="ant-segmented-item-label"
        title="Transit"
      >
        Transit
      </div>
    </label>
    <label
      class="ant-segmented-item"
    >
      <input
        class="ant-segmented-item-input"
        name="test-id"
        type="radio"
      />
      <div
        class="ant-segmented-item-label"
        title="Satellite"
      >
        Satellite
      </div>
    </label>
  </div>
</div>
`;

exports[`renders components/segmented/demo/controlled.tsx extend context correctly 2`] = `[]`;

exports[`renders components/segmented/demo/controlled-two.tsx extend context correctly 1`] = `
Array [
  <div
    aria-label="segmented control"
    aria-orientation="horizontal"
    class="ant-segmented css-var-test-id"
    role="radiogroup"
    tabindex="0"
  >
    <div
      class="ant-segmented-group"
    >
      <label
        class="ant-segmented-item ant-segmented-item-selected"
      >
        <input
          checked=""
          class="ant-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="AND"
        >
          AND
        </div>
      </label>
      <label
        class="ant-segmented-item"
      >
        <input
          class="ant-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="OR"
        >
          OR
        </div>
      </label>
      <label
        class="ant-segmented-item"
      >
        <input
          class="ant-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="NOT"
        >
          NOT
        </div>
      </label>
    </div>
  </div>,
    ,
  <div
    aria-label="segmented control"
    aria-orientation="horizontal"
    class="ant-segmented css-var-test-id"
    role="radiogroup"
    tabindex="0"
  >
    <div
      class="ant-segmented-group"
    >
      <label
        class="ant-segmented-item ant-segmented-item-selected"
      >
        <input
          checked=""
          class="ant-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="AND"
        >
          AND
        </div>
      </label>
      <label
        class="ant-segmented-item"
      >
        <input
          class="ant-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="OR"
        >
          OR
        </div>
      </label>
      <label
        class="ant-segmented-item"
      >
        <input
          class="ant-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="NOT"
        >
          NOT
        </div>
      </label>
    </div>
  </div>,
]
`;

exports[`renders components/segmented/demo/controlled-two.tsx extend context correctly 2`] = `[]`;

exports[`renders components/segmented/demo/custom.tsx extend context correctly 1`] = `
<div
  class="ant-flex css-var-test-id ant-flex-align-flex-start ant-flex-gap-small ant-flex-vertical"
>
  <div
    aria-label="segmented control"
    aria-orientation="horizontal"
    class="ant-segmented css-var-test-id"
    role="radiogroup"
    tabindex="0"
  >
    <div
      class="ant-segmented-group"
    >
      <label
        aria-describedby="test-id"
        class="ant-segmented-item ant-segmented-item-selected"
      >
        <input
          checked=""
          class="ant-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
        >
          <div
            style="padding: 4px;"
          >
            <span
              class="ant-avatar ant-avatar-circle ant-avatar-image css-var-test-id ant-avatar-css-var"
            >
              <img
                alt="User 1"
                src="https://api.dicebear.com/7.x/miniavs/svg?seed=8"
              />
            </span>
            <div>
              User 1
            </div>
          </div>
        </div>
      </label>
      <div
        class="ant-tooltip ant-zoom-big-fast-appear ant-zoom-big-fast-appear-prepare ant-zoom-big-fast ant-tooltip-gold ant-tooltip-css-var css-var-test-id ant-tooltip-placement-top"
        style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
      >
        <div
          class="ant-tooltip-arrow"
          style="position: absolute; bottom: 0px; left: 0px;"
        >
          <span
            class="ant-tooltip-arrow-content"
          />
        </div>
        <div
          class="ant-tooltip-container"
          id="test-id"
          role="tooltip"
        >
          hello user1
        </div>
      </div>
      <label
        aria-describedby="test-id"
        class="ant-segmented-item"
      >
        <input
          class="ant-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
        >
          <div
            style="padding: 4px;"
          >
            <span
              class="ant-avatar ant-avatar-circle css-var-test-id ant-avatar-css-var"
              style="background-color: rgb(245, 106, 0);"
            >
              <span
                class="ant-avatar-string"
                style="-webkit-transform: scale(1); transform: scale(1);"
              >
                K
              </span>
            </span>
            <div>
              User 2
            </div>
          </div>
        </div>
      </label>
      <div
        class="ant-tooltip ant-zoom-big-fast-appear ant-zoom-big-fast-appear-prepare ant-zoom-big-fast ant-tooltip-pink ant-tooltip-css-var css-var-test-id ant-tooltip-placement-top"
        style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
      >
        <div
          class="ant-tooltip-arrow"
          style="position: absolute; bottom: 0px; left: 0px;"
        >
          <span
            class="ant-tooltip-arrow-content"
          />
        </div>
        <div
          class="ant-tooltip-container"
          id="test-id"
          role="tooltip"
        >
          hello user2
        </div>
      </div>
      <label
        aria-describedby="test-id"
        class="ant-segmented-item"
      >
        <input
          class="ant-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
        >
          <div
            style="padding: 4px;"
          >
            <span
              class="ant-avatar ant-avatar-circle ant-avatar-icon css-var-test-id ant-avatar-css-var"
              style="background-color: rgb(135, 208, 104);"
            >
              <span
                aria-label="user"
                class="anticon anticon-user"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="user"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M858.5 763.6a374 374 0 00-80.6-119.5 375.63 375.63 0 00-119.5-80.6c-.4-.2-.8-.3-1.2-.5C719.5 518 760 444.7 760 362c0-137-111-248-248-248S264 225 264 362c0 82.7 40.5 156 102.8 201.1-.4.2-.8.3-1.2.5-44.8 18.9-85 46-119.5 80.6a375.63 375.63 0 00-80.6 119.5A371.7 371.7 0 00136 901.8a8 8 0 008 8.2h60c4.4 0 7.9-3.5 8-7.8 2-77.2 33-149.5 87.8-204.3 56.7-56.7 132-87.9 212.2-87.9s155.5 31.2 212.2 87.9C779 752.7 810 825 812 902.2c.1 4.4 3.6 7.8 8 7.8h60a8 8 0 008-8.2c-1-47.8-10.9-94.3-29.5-138.2zM512 534c-45.9 0-89.1-17.9-121.6-50.4S340 407.9 340 362c0-45.9 17.9-89.1 50.4-121.6S466.1 190 512 190s89.1 17.9 121.6 50.4S684 316.1 684 362c0 45.9-17.9 89.1-50.4 121.6S557.9 534 512 534z"
                  />
                </svg>
              </span>
            </span>
            <div>
              User 3
            </div>
          </div>
        </div>
      </label>
      <div
        class="ant-tooltip ant-zoom-big-fast-appear ant-zoom-big-fast-appear-prepare ant-zoom-big-fast ant-tooltip-geekblue ant-tooltip-css-var css-var-test-id ant-tooltip-placement-top"
        style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
      >
        <div
          class="ant-tooltip-arrow"
          style="position: absolute; bottom: 0px; left: 0px;"
        >
          <span
            class="ant-tooltip-arrow-content"
          />
        </div>
        <div
          class="ant-tooltip-container"
          id="test-id"
          role="tooltip"
        >
          hello user3
        </div>
      </div>
    </div>
  </div>
  <div
    aria-label="segmented control"
    aria-orientation="horizontal"
    class="ant-segmented css-var-test-id"
    role="radiogroup"
    tabindex="0"
  >
    <div
      class="ant-segmented-group"
    >
      <label
        class="ant-segmented-item ant-segmented-item-selected"
      >
        <input
          checked=""
          class="ant-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
        >
          <div
            style="padding: 4px;"
          >
            <div>
              Spring
            </div>
            <div>
              Jan-Mar
            </div>
          </div>
        </div>
      </label>
      <label
        class="ant-segmented-item"
      >
        <input
          class="ant-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
        >
          <div
            style="padding: 4px;"
          >
            <div>
              Summer
            </div>
            <div>
              Apr-Jun
            </div>
          </div>
        </div>
      </label>
      <label
        class="ant-segmented-item"
      >
        <input
          class="ant-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
        >
          <div
            style="padding: 4px;"
          >
            <div>
              Autumn
            </div>
            <div>
              Jul-Sept
            </div>
          </div>
        </div>
      </label>
      <label
        class="ant-segmented-item"
      >
        <input
          class="ant-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
        >
          <div
            style="padding: 4px;"
          >
            <div>
              Winter
            </div>
            <div>
              Oct-Dec
            </div>
          </div>
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`renders components/segmented/demo/custom.tsx extend context correctly 2`] = `[]`;

exports[`renders components/segmented/demo/disabled.tsx extend context correctly 1`] = `
<div
  class="ant-flex css-var-test-id ant-flex-align-flex-start ant-flex-gap-small ant-flex-vertical"
>
  <div
    aria-label="segmented control"
    aria-orientation="horizontal"
    class="ant-segmented ant-segmented-disabled css-var-test-id"
    role="radiogroup"
  >
    <div
      class="ant-segmented-group"
    >
      <label
        class="ant-segmented-item ant-segmented-item-selected ant-segmented-item-disabled"
      >
        <input
          checked=""
          class="ant-segmented-item-input"
          disabled=""
          name="test-id"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="Map"
        >
          Map
        </div>
      </label>
      <label
        class="ant-segmented-item ant-segmented-item-disabled"
      >
        <input
          class="ant-segmented-item-input"
          disabled=""
          name="test-id"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="Transit"
        >
          Transit
        </div>
      </label>
      <label
        class="ant-segmented-item ant-segmented-item-disabled"
      >
        <input
          class="ant-segmented-item-input"
          disabled=""
          name="test-id"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="Satellite"
        >
          Satellite
        </div>
      </label>
    </div>
  </div>
  <div
    aria-label="segmented control"
    aria-orientation="horizontal"
    class="ant-segmented css-var-test-id"
    role="radiogroup"
    tabindex="0"
  >
    <div
      class="ant-segmented-group"
    >
      <label
        class="ant-segmented-item ant-segmented-item-selected"
      >
        <input
          checked=""
          class="ant-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="Daily"
        >
          Daily
        </div>
      </label>
      <label
        class="ant-segmented-item ant-segmented-item-disabled"
      >
        <input
          class="ant-segmented-item-input"
          disabled=""
          name="test-id"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="Weekly"
        >
          Weekly
        </div>
      </label>
      <label
        class="ant-segmented-item"
      >
        <input
          class="ant-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="Monthly"
        >
          Monthly
        </div>
      </label>
      <label
        class="ant-segmented-item ant-segmented-item-disabled"
      >
        <input
          class="ant-segmented-item-input"
          disabled=""
          name="test-id"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="Quarterly"
        >
          Quarterly
        </div>
      </label>
      <label
        class="ant-segmented-item"
      >
        <input
          class="ant-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="Yearly"
        >
          Yearly
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`renders components/segmented/demo/disabled.tsx extend context correctly 2`] = `[]`;

exports[`renders components/segmented/demo/dynamic.tsx extend context correctly 1`] = `
<div
  class="ant-flex css-var-test-id ant-flex-align-flex-start ant-flex-gap-small ant-flex-vertical"
>
  <div
    aria-label="segmented control"
    aria-orientation="horizontal"
    class="ant-segmented css-var-test-id"
    role="radiogroup"
    tabindex="0"
  >
    <div
      class="ant-segmented-group"
    >
      <label
        class="ant-segmented-item ant-segmented-item-selected"
      >
        <input
          checked=""
          class="ant-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="Daily"
        >
          Daily
        </div>
      </label>
      <label
        class="ant-segmented-item"
      >
        <input
          class="ant-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="Weekly"
        >
          Weekly
        </div>
      </label>
      <label
        class="ant-segmented-item"
      >
        <input
          class="ant-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="Monthly"
        >
          Monthly
        </div>
      </label>
    </div>
  </div>
  <button
    class="ant-btn css-var-test-id ant-btn-primary ant-btn-color-primary ant-btn-variant-solid"
    type="button"
  >
    <span>
      Load more options
    </span>
  </button>
</div>
`;

exports[`renders components/segmented/demo/dynamic.tsx extend context correctly 2`] = `[]`;

exports[`renders components/segmented/demo/icon-only.tsx extend context correctly 1`] = `
<div
  aria-label="segmented control"
  aria-orientation="horizontal"
  class="ant-segmented css-var-test-id"
  role="radiogroup"
  tabindex="0"
>
  <div
    class="ant-segmented-group"
  >
    <label
      class="ant-segmented-item ant-segmented-item-selected"
    >
      <input
        checked=""
        class="ant-segmented-item-input"
        name="test-id"
        type="radio"
      />
      <div
        class="ant-segmented-item-label"
      >
        <span
          class="ant-segmented-item-icon"
        >
          <span
            aria-label="bars"
            class="anticon anticon-bars"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="bars"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
            >
              <path
                d="M912 192H328c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h584c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zm0 284H328c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h584c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zm0 284H328c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h584c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zM104 228a56 56 0 10112 0 56 56 0 10-112 0zm0 284a56 56 0 10112 0 56 56 0 10-112 0zm0 284a56 56 0 10112 0 56 56 0 10-112 0z"
              />
            </svg>
          </span>
        </span>
      </div>
    </label>
    <label
      class="ant-segmented-item"
    >
      <input
        class="ant-segmented-item-input"
        name="test-id"
        type="radio"
      />
      <div
        class="ant-segmented-item-label"
      >
        <span
          class="ant-segmented-item-icon"
        >
          <span
            aria-label="appstore"
            class="anticon anticon-appstore"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="appstore"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M464 144H160c-8.8 0-16 7.2-16 16v304c0 8.8 7.2 16 16 16h304c8.8 0 16-7.2 16-16V160c0-8.8-7.2-16-16-16zm-52 268H212V212h200v200zm452-268H560c-8.8 0-16 7.2-16 16v304c0 8.8 7.2 16 16 16h304c8.8 0 16-7.2 16-16V160c0-8.8-7.2-16-16-16zm-52 268H612V212h200v200zM464 544H160c-8.8 0-16 7.2-16 16v304c0 8.8 7.2 16 16 16h304c8.8 0 16-7.2 16-16V560c0-8.8-7.2-16-16-16zm-52 268H212V612h200v200zm452-268H560c-8.8 0-16 7.2-16 16v304c0 8.8 7.2 16 16 16h304c8.8 0 16-7.2 16-16V560c0-8.8-7.2-16-16-16zm-52 268H612V612h200v200z"
              />
            </svg>
          </span>
        </span>
      </div>
    </label>
  </div>
</div>
`;

exports[`renders components/segmented/demo/icon-only.tsx extend context correctly 2`] = `[]`;

exports[`renders components/segmented/demo/shape.tsx extend context correctly 1`] = `
<div
  class="ant-flex css-var-test-id ant-flex-align-flex-start ant-flex-gap-small ant-flex-vertical"
>
  <div
    aria-label="segmented control"
    aria-orientation="horizontal"
    class="ant-segmented css-var-test-id"
    role="radiogroup"
    tabindex="0"
  >
    <div
      class="ant-segmented-group"
    >
      <label
        class="ant-segmented-item"
      >
        <input
          class="ant-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="small"
        >
          small
        </div>
      </label>
      <label
        class="ant-segmented-item ant-segmented-item-selected"
      >
        <input
          checked=""
          class="ant-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="middle"
        >
          middle
        </div>
      </label>
      <label
        class="ant-segmented-item"
      >
        <input
          class="ant-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="large"
        >
          large
        </div>
      </label>
    </div>
  </div>
  <div
    aria-label="segmented control"
    aria-orientation="horizontal"
    class="ant-segmented ant-segmented-shape-round css-var-test-id"
    role="radiogroup"
    tabindex="0"
  >
    <div
      class="ant-segmented-group"
    >
      <label
        class="ant-segmented-item ant-segmented-item-selected"
      >
        <input
          checked=""
          class="ant-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
        >
          <span
            class="ant-segmented-item-icon"
          >
            <span
              aria-label="sun"
              class="anticon anticon-sun"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="sun"
                fill="currentColor"
                fill-rule="evenodd"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M548 818v126a16 16 0 01-16 16h-40a16 16 0 01-16-16V818c15.85 1.64 27.84 2.46 36 2.46 8.15 0 20.16-.82 36-2.46m205.25-115.66l89.1 89.1a16 16 0 010 22.62l-28.29 28.29a16 16 0 01-22.62 0l-89.1-89.1c12.37-10.04 21.43-17.95 27.2-23.71 5.76-5.77 13.67-14.84 23.71-27.2m-482.5 0c10.04 12.36 17.95 21.43 23.71 27.2 5.77 5.76 14.84 13.67 27.2 23.71l-89.1 89.1a16 16 0 01-22.62 0l-28.29-28.29a16 16 0 010-22.63zM512 278c129.24 0 234 104.77 234 234S641.24 746 512 746 278 641.24 278 512s104.77-234 234-234m0 72c-89.47 0-162 72.53-162 162s72.53 162 162 162 162-72.53 162-162-72.53-162-162-162M206 476c-1.64 15.85-2.46 27.84-2.46 36 0 8.15.82 20.16 2.46 36H80a16 16 0 01-16-16v-40a16 16 0 0116-16zm738 0a16 16 0 0116 16v40a16 16 0 01-16 16H818c1.64-15.85 2.46-27.84 2.46-36 0-8.15-.82-20.16-2.46-36zM814.06 180.65l28.29 28.29a16 16 0 010 22.63l-89.1 89.09c-10.04-12.37-17.95-21.43-23.71-27.2-5.77-5.76-14.84-13.67-27.2-23.71l89.1-89.1a16 16 0 0122.62 0m-581.5 0l89.1 89.1c-12.37 10.04-21.43 17.95-27.2 23.71-5.76 5.77-13.67 14.84-23.71 27.2l-89.1-89.1a16 16 0 010-22.62l28.29-28.29a16 16 0 0122.62 0M532 64a16 16 0 0116 16v126c-15.85-1.64-27.84-2.46-36-2.46-8.15 0-20.16.82-36 2.46V80a16 16 0 0116-16z"
                />
              </svg>
            </span>
          </span>
        </div>
      </label>
      <label
        class="ant-segmented-item"
      >
        <input
          class="ant-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
        >
          <span
            class="ant-segmented-item-icon"
          >
            <span
              aria-label="moon"
              class="anticon anticon-moon"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="moon"
                fill="currentColor"
                fill-rule="evenodd"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M489.5 111.66c30.65-1.8 45.98 36.44 22.58 56.33A243.35 243.35 0 00426 354c0 134.76 109.24 244 244 244 72.58 0 139.9-31.83 186.01-86.08 19.87-23.38 58.07-8.1 56.34 22.53C900.4 745.82 725.15 912 512.5 912 291.31 912 112 732.69 112 511.5c0-211.39 164.29-386.02 374.2-399.65l.2-.01zm-81.15 79.75l-4.11 1.36C271.1 237.94 176 364.09 176 511.5 176 697.34 326.66 848 512.5 848c148.28 0 274.94-96.2 319.45-230.41l.63-1.93-.11.07a307.06 307.06 0 01-159.73 46.26L670 662c-170.1 0-308-137.9-308-308 0-58.6 16.48-114.54 46.27-162.47z"
                />
              </svg>
            </span>
          </span>
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`renders components/segmented/demo/shape.tsx extend context correctly 2`] = `[]`;

exports[`renders components/segmented/demo/size.tsx extend context correctly 1`] = `
<div
  class="ant-flex css-var-test-id ant-flex-align-flex-start ant-flex-gap-small ant-flex-vertical"
>
  <div
    aria-label="segmented control"
    aria-orientation="horizontal"
    class="ant-segmented ant-segmented-lg css-var-test-id"
    role="radiogroup"
    tabindex="0"
  >
    <div
      class="ant-segmented-group"
    >
      <label
        class="ant-segmented-item ant-segmented-item-selected"
      >
        <input
          checked=""
          class="ant-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="Daily"
        >
          Daily
        </div>
      </label>
      <label
        class="ant-segmented-item"
      >
        <input
          class="ant-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="Weekly"
        >
          Weekly
        </div>
      </label>
      <label
        class="ant-segmented-item"
      >
        <input
          class="ant-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="Monthly"
        >
          Monthly
        </div>
      </label>
      <label
        class="ant-segmented-item"
      >
        <input
          class="ant-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="Quarterly"
        >
          Quarterly
        </div>
      </label>
      <label
        class="ant-segmented-item"
      >
        <input
          class="ant-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="Yearly"
        >
          Yearly
        </div>
      </label>
    </div>
  </div>
  <div
    aria-label="segmented control"
    aria-orientation="horizontal"
    class="ant-segmented css-var-test-id"
    role="radiogroup"
    tabindex="0"
  >
    <div
      class="ant-segmented-group"
    >
      <label
        class="ant-segmented-item ant-segmented-item-selected"
      >
        <input
          checked=""
          class="ant-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="Daily"
        >
          Daily
        </div>
      </label>
      <label
        class="ant-segmented-item"
      >
        <input
          class="ant-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="Weekly"
        >
          Weekly
        </div>
      </label>
      <label
        class="ant-segmented-item"
      >
        <input
          class="ant-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="Monthly"
        >
          Monthly
        </div>
      </label>
      <label
        class="ant-segmented-item"
      >
        <input
          class="ant-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="Quarterly"
        >
          Quarterly
        </div>
      </label>
      <label
        class="ant-segmented-item"
      >
        <input
          class="ant-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="Yearly"
        >
          Yearly
        </div>
      </label>
    </div>
  </div>
  <div
    aria-label="segmented control"
    aria-orientation="horizontal"
    class="ant-segmented ant-segmented-sm css-var-test-id"
    role="radiogroup"
    tabindex="0"
  >
    <div
      class="ant-segmented-group"
    >
      <label
        class="ant-segmented-item ant-segmented-item-selected"
      >
        <input
          checked=""
          class="ant-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="Daily"
        >
          Daily
        </div>
      </label>
      <label
        class="ant-segmented-item"
      >
        <input
          class="ant-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="Weekly"
        >
          Weekly
        </div>
      </label>
      <label
        class="ant-segmented-item"
      >
        <input
          class="ant-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="Monthly"
        >
          Monthly
        </div>
      </label>
      <label
        class="ant-segmented-item"
      >
        <input
          class="ant-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="Quarterly"
        >
          Quarterly
        </div>
      </label>
      <label
        class="ant-segmented-item"
      >
        <input
          class="ant-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="Yearly"
        >
          Yearly
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`renders components/segmented/demo/size.tsx extend context correctly 2`] = `[]`;

exports[`renders components/segmented/demo/size-consistent.tsx extend context correctly 1`] = `
<div
  class="ant-flex css-var-test-id ant-flex-align-stretch ant-flex-gap-small ant-flex-vertical"
>
  <div>
    <div
      aria-label="segmented control"
      aria-orientation="horizontal"
      class="ant-segmented ant-segmented-lg css-var-test-id"
      role="radiogroup"
      style="margin-inline-end: 6px;"
      tabindex="0"
    >
      <div
        class="ant-segmented-group"
      >
        <label
          class="ant-segmented-item ant-segmented-item-selected"
        >
          <input
            checked=""
            class="ant-segmented-item-input"
            name="test-id"
            type="radio"
          />
          <div
            class="ant-segmented-item-label"
            title="Daily"
          >
            Daily
          </div>
        </label>
        <label
          class="ant-segmented-item"
        >
          <input
            class="ant-segmented-item-input"
            name="test-id"
            type="radio"
          />
          <div
            class="ant-segmented-item-label"
            title="Weekly"
          >
            Weekly
          </div>
        </label>
        <label
          class="ant-segmented-item"
        >
          <input
            class="ant-segmented-item-input"
            name="test-id"
            type="radio"
          />
          <div
            class="ant-segmented-item-label"
            title="Monthly"
          >
            Monthly
          </div>
        </label>
      </div>
    </div>
    <button
      class="ant-btn css-var-test-id ant-btn-primary ant-btn-color-primary ant-btn-variant-solid ant-btn-lg"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div>
    <div
      aria-label="segmented control"
      aria-orientation="horizontal"
      class="ant-segmented css-var-test-id"
      role="radiogroup"
      style="margin-inline-end: 6px;"
      tabindex="0"
    >
      <div
        class="ant-segmented-group"
      >
        <label
          class="ant-segmented-item ant-segmented-item-selected"
        >
          <input
            checked=""
            class="ant-segmented-item-input"
            name="test-id"
            type="radio"
          />
          <div
            class="ant-segmented-item-label"
            title="Daily"
          >
            Daily
          </div>
        </label>
        <label
          class="ant-segmented-item"
        >
          <input
            class="ant-segmented-item-input"
            name="test-id"
            type="radio"
          />
          <div
            class="ant-segmented-item-label"
            title="Weekly"
          >
            Weekly
          </div>
        </label>
        <label
          class="ant-segmented-item"
        >
          <input
            class="ant-segmented-item-input"
            name="test-id"
            type="radio"
          />
          <div
            class="ant-segmented-item-label"
            title="Monthly"
          >
            Monthly
          </div>
        </label>
      </div>
    </div>
    <input
      class="ant-input ant-input-outlined css-var-test-id ant-input-css-var"
      placeholder="default size"
      style="width: 150px;"
      type="text"
      value=""
    />
  </div>
  <div>
    <div
      aria-label="segmented control"
      aria-orientation="horizontal"
      class="ant-segmented ant-segmented-sm css-var-test-id"
      role="radiogroup"
      style="margin-inline-end: 6px;"
      tabindex="0"
    >
      <div
        class="ant-segmented-group"
      >
        <label
          class="ant-segmented-item ant-segmented-item-selected"
        >
          <input
            checked=""
            class="ant-segmented-item-input"
            name="test-id"
            type="radio"
          />
          <div
            class="ant-segmented-item-label"
            title="Daily"
          >
            Daily
          </div>
        </label>
        <label
          class="ant-segmented-item"
        >
          <input
            class="ant-segmented-item-input"
            name="test-id"
            type="radio"
          />
          <div
            class="ant-segmented-item-label"
            title="Weekly"
          >
            Weekly
          </div>
        </label>
        <label
          class="ant-segmented-item"
        >
          <input
            class="ant-segmented-item-input"
            name="test-id"
            type="radio"
          />
          <div
            class="ant-segmented-item-label"
            title="Monthly"
          >
            Monthly
          </div>
        </label>
      </div>
    </div>
    <div
      class="ant-select ant-select-sm ant-select-outlined css-var-test-id ant-select-css-var ant-select-single ant-select-show-arrow"
      style="width: 150px;"
    >
      <div
        class="ant-select-content"
      >
        <div
          class="ant-select-content-value"
          style="visibility: visible;"
          title="Lucy"
        >
          Lucy
        </div>
        <input
          aria-autocomplete="list"
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-label="select"
          autocomplete="off"
          class="ant-select-input"
          id="test-id"
          readonly=""
          role="combobox"
          type="search"
          value=""
        />
      </div>
      <div
        class="ant-select-suffix"
      >
        <span
          aria-label="down"
          class="anticon anticon-down"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="down"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="ant-select-dropdown ant-slide-up-appear ant-slide-up-appear-prepare ant-slide-up css-var-test-id ant-select-css-var ant-select-dropdown-placement-bottomLeft"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
    >
      <div>
        <div
          id="test-id_list"
          role="listbox"
          style="height: 0px; width: 0px; overflow: hidden;"
        >
          <div
            aria-label="Lucy"
            aria-selected="true"
            id="test-id_list_0"
            role="option"
          >
            lucy
          </div>
        </div>
        <div
          class="rc-virtual-list"
          style="position: relative;"
        >
          <div
            class="rc-virtual-list-holder"
            style="max-height: 256px; overflow-y: auto; overflow-anchor: none;"
          >
            <div>
              <div
                class="rc-virtual-list-holder-inner"
                style="display: flex; flex-direction: column;"
              >
                <div
                  class="ant-select-item ant-select-item-option ant-select-item-option-active ant-select-item-option-selected"
                  title="Lucy"
                >
                  <div
                    class="ant-select-item-option-content"
                  >
                    Lucy
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-item-option-state"
                    style="user-select: none;"
                    unselectable="on"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/segmented/demo/size-consistent.tsx extend context correctly 2`] = `[]`;

exports[`renders components/segmented/demo/style-class.tsx extend context correctly 1`] = `
<div
  class="ant-flex css-var-test-id ant-flex-align-stretch ant-flex-gap-middle ant-flex-vertical"
>
  <div
    aria-label="segmented control"
    aria-orientation="horizontal"
    class="ant-segmented acss-1kgw61x css-var-test-id"
    role="radiogroup"
    style="padding: 4px; width: 260px;"
    tabindex="0"
  >
    <div
      class="ant-segmented-group"
    >
      <label
        class="ant-segmented-item ant-segmented-item-selected"
      >
        <input
          checked=""
          class="ant-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
        >
          <span
            class="ant-segmented-item-icon"
          >
            <span
              aria-label="rocket"
              class="anticon anticon-rocket"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="rocket"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M864 736c0-111.6-65.4-208-160-252.9V317.3c0-15.1-5.3-29.7-15.1-41.2L536.5 95.4C530.1 87.8 521 84 512 84s-18.1 3.8-24.5 11.4L335.1 276.1a63.97 63.97 0 00-15.1 41.2v165.8C225.4 528 160 624.4 160 736h156.5c-2.3 7.2-3.5 15-3.5 23.8 0 22.1 7.6 43.7 21.4 60.8a97.2 97.2 0 0043.1 30.6c23.1 54 75.6 88.8 134.5 88.8 29.1 0 57.3-8.6 81.4-24.8 23.6-15.8 41.9-37.9 53-64a97 97 0 0043.1-30.5 97.52 97.52 0 0021.4-60.8c0-8.4-1.1-16.4-3.1-23.8H864zM762.3 621.4c9.4 14.6 17 30.3 22.5 46.6H700V558.7a211.6 211.6 0 0162.3 62.7zM388 483.1V318.8l124-147 124 147V668H388V483.1zM239.2 668c5.5-16.3 13.1-32 22.5-46.6 16.3-25.2 37.5-46.5 62.3-62.7V668h-84.8zm388.9 116.2c-5.2 3-11.2 4.2-17.1 3.4l-19.5-2.4-2.8 19.4c-5.4 37.9-38.4 66.5-76.7 66.5-38.3 0-71.3-28.6-76.7-66.5l-2.8-19.5-19.5 2.5a27.7 27.7 0 01-17.1-3.5c-8.7-5-14.1-14.3-14.1-24.4 0-10.6 5.9-19.4 14.6-23.8h231.3c8.8 4.5 14.6 13.3 14.6 23.8-.1 10.2-5.5 19.6-14.2 24.5zM464 400a48 48 0 1096 0 48 48 0 10-96 0z"
                />
              </svg>
            </span>
          </span>
          <span>
            Boost
          </span>
        </div>
      </label>
      <label
        class="ant-segmented-item"
      >
        <input
          class="ant-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
        >
          <span
            class="ant-segmented-item-icon"
          >
            <span
              aria-label="thunderbolt"
              class="anticon anticon-thunderbolt"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="thunderbolt"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M848 359.3H627.7L825.8 109c4.1-5.3.4-13-6.3-13H436c-2.8 0-5.5 1.5-6.9 4L170 547.5c-3.1 5.3.7 12 6.9 12h174.4l-89.4 357.6c-1.9 7.8 7.5 13.3 13.3 7.7L853.5 373c5.2-4.9 1.7-13.7-5.5-13.7zM378.2 732.5l60.3-241H281.1l189.6-327.4h224.6L487 427.4h211L378.2 732.5z"
                />
              </svg>
            </span>
          </span>
          <span>
            Stream
          </span>
        </div>
      </label>
      <label
        class="ant-segmented-item"
      >
        <input
          class="ant-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
        >
          <span
            class="ant-segmented-item-icon"
          >
            <span
              aria-label="cloud"
              class="anticon anticon-cloud"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="cloud"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M811.4 418.7C765.6 297.9 648.9 212 512.2 212S258.8 297.8 213 418.6C127.3 441.1 64 519.1 64 612c0 110.5 89.5 200 199.9 200h496.2C870.5 812 960 722.5 960 612c0-92.7-63.1-170.7-148.6-193.3zm36.3 281a123.07 123.07 0 01-87.6 36.3H263.9c-33.1 0-64.2-12.9-87.6-36.3A123.3 123.3 0 01140 612c0-28 9.1-54.3 26.2-76.3a125.7 125.7 0 0166.1-43.7l37.9-9.9 13.9-36.6c8.6-22.8 20.6-44.1 35.7-63.4a245.6 245.6 0 0152.4-49.9c41.1-28.9 89.5-44.2 140-44.2s98.9 15.3 140 44.2c19.9 14 37.5 30.8 52.4 49.9 15.1 19.3 27.1 40.7 35.7 63.4l13.8 36.5 37.8 10c54.3 14.5 92.1 63.8 92.1 120 0 33.1-12.9 64.3-36.3 87.7z"
                />
              </svg>
            </span>
          </span>
          <span>
            Cloud
          </span>
        </div>
      </label>
    </div>
  </div>
  <div
    aria-label="segmented control"
    aria-orientation="vertical"
    class="ant-segmented ant-segmented-vertical acss-1kgw61x ant-segmented-vertical css-var-test-id"
    role="radiogroup"
    style="border: 1px solid rgb(119, 190, 240); padding: 4px; width: 100px;"
    tabindex="0"
  >
    <div
      class="ant-segmented-group"
    >
      <label
        class="ant-segmented-item ant-segmented-item-selected"
        style="text-align: start;"
      >
        <input
          checked=""
          class="ant-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
        >
          <span
            class="ant-segmented-item-icon"
            style="color: rgb(119, 190, 240);"
          >
            <span
              aria-label="rocket"
              class="anticon anticon-rocket"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="rocket"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M864 736c0-111.6-65.4-208-160-252.9V317.3c0-15.1-5.3-29.7-15.1-41.2L536.5 95.4C530.1 87.8 521 84 512 84s-18.1 3.8-24.5 11.4L335.1 276.1a63.97 63.97 0 00-15.1 41.2v165.8C225.4 528 160 624.4 160 736h156.5c-2.3 7.2-3.5 15-3.5 23.8 0 22.1 7.6 43.7 21.4 60.8a97.2 97.2 0 0043.1 30.6c23.1 54 75.6 88.8 134.5 88.8 29.1 0 57.3-8.6 81.4-24.8 23.6-15.8 41.9-37.9 53-64a97 97 0 0043.1-30.5 97.52 97.52 0 0021.4-60.8c0-8.4-1.1-16.4-3.1-23.8H864zM762.3 621.4c9.4 14.6 17 30.3 22.5 46.6H700V558.7a211.6 211.6 0 0162.3 62.7zM388 483.1V318.8l124-147 124 147V668H388V483.1zM239.2 668c5.5-16.3 13.1-32 22.5-46.6 16.3-25.2 37.5-46.5 62.3-62.7V668h-84.8zm388.9 116.2c-5.2 3-11.2 4.2-17.1 3.4l-19.5-2.4-2.8 19.4c-5.4 37.9-38.4 66.5-76.7 66.5-38.3 0-71.3-28.6-76.7-66.5l-2.8-19.5-19.5 2.5a27.7 27.7 0 01-17.1-3.5c-8.7-5-14.1-14.3-14.1-24.4 0-10.6 5.9-19.4 14.6-23.8h231.3c8.8 4.5 14.6 13.3 14.6 23.8-.1 10.2-5.5 19.6-14.2 24.5zM464 400a48 48 0 1096 0 48 48 0 10-96 0z"
                />
              </svg>
            </span>
          </span>
          <span>
            Boost
          </span>
        </div>
      </label>
      <label
        class="ant-segmented-item"
        style="text-align: start;"
      >
        <input
          class="ant-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
        >
          <span
            class="ant-segmented-item-icon"
            style="color: rgb(119, 190, 240);"
          >
            <span
              aria-label="thunderbolt"
              class="anticon anticon-thunderbolt"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="thunderbolt"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M848 359.3H627.7L825.8 109c4.1-5.3.4-13-6.3-13H436c-2.8 0-5.5 1.5-6.9 4L170 547.5c-3.1 5.3.7 12 6.9 12h174.4l-89.4 357.6c-1.9 7.8 7.5 13.3 13.3 7.7L853.5 373c5.2-4.9 1.7-13.7-5.5-13.7zM378.2 732.5l60.3-241H281.1l189.6-327.4h224.6L487 427.4h211L378.2 732.5z"
                />
              </svg>
            </span>
          </span>
          <span>
            Stream
          </span>
        </div>
      </label>
      <label
        class="ant-segmented-item"
        style="text-align: start;"
      >
        <input
          class="ant-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
        >
          <span
            class="ant-segmented-item-icon"
            style="color: rgb(119, 190, 240);"
          >
            <span
              aria-label="cloud"
              class="anticon anticon-cloud"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="cloud"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M811.4 418.7C765.6 297.9 648.9 212 512.2 212S258.8 297.8 213 418.6C127.3 441.1 64 519.1 64 612c0 110.5 89.5 200 199.9 200h496.2C870.5 812 960 722.5 960 612c0-92.7-63.1-170.7-148.6-193.3zm36.3 281a123.07 123.07 0 01-87.6 36.3H263.9c-33.1 0-64.2-12.9-87.6-36.3A123.3 123.3 0 01140 612c0-28 9.1-54.3 26.2-76.3a125.7 125.7 0 0166.1-43.7l37.9-9.9 13.9-36.6c8.6-22.8 20.6-44.1 35.7-63.4a245.6 245.6 0 0152.4-49.9c41.1-28.9 89.5-44.2 140-44.2s98.9 15.3 140 44.2c19.9 14 37.5 30.8 52.4 49.9 15.1 19.3 27.1 40.7 35.7 63.4l13.8 36.5 37.8 10c54.3 14.5 92.1 63.8 92.1 120 0 33.1-12.9 64.3-36.3 87.7z"
                />
              </svg>
            </span>
          </span>
          <span>
            Cloud
          </span>
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`renders components/segmented/demo/style-class.tsx extend context correctly 2`] = `[]`;

exports[`renders components/segmented/demo/vertical.tsx extend context correctly 1`] = `
<div
  aria-label="segmented control"
  aria-orientation="vertical"
  class="ant-segmented ant-segmented-vertical ant-segmented-vertical css-var-test-id"
  role="radiogroup"
  tabindex="0"
>
  <div
    class="ant-segmented-group"
  >
    <label
      class="ant-segmented-item ant-segmented-item-selected"
    >
      <input
        checked=""
        class="ant-segmented-item-input"
        name="test-id"
        type="radio"
      />
      <div
        class="ant-segmented-item-label"
      >
        <span
          class="ant-segmented-item-icon"
        >
          <span
            aria-label="bars"
            class="anticon anticon-bars"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="bars"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
            >
              <path
                d="M912 192H328c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h584c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zm0 284H328c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h584c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zm0 284H328c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h584c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zM104 228a56 56 0 10112 0 56 56 0 10-112 0zm0 284a56 56 0 10112 0 56 56 0 10-112 0zm0 284a56 56 0 10112 0 56 56 0 10-112 0z"
              />
            </svg>
          </span>
        </span>
      </div>
    </label>
    <label
      class="ant-segmented-item"
    >
      <input
        class="ant-segmented-item-input"
        name="test-id"
        type="radio"
      />
      <div
        class="ant-segmented-item-label"
      >
        <span
          class="ant-segmented-item-icon"
        >
          <span
            aria-label="appstore"
            class="anticon anticon-appstore"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="appstore"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M464 144H160c-8.8 0-16 7.2-16 16v304c0 8.8 7.2 16 16 16h304c8.8 0 16-7.2 16-16V160c0-8.8-7.2-16-16-16zm-52 268H212V212h200v200zm452-268H560c-8.8 0-16 7.2-16 16v304c0 8.8 7.2 16 16 16h304c8.8 0 16-7.2 16-16V160c0-8.8-7.2-16-16-16zm-52 268H612V212h200v200zM464 544H160c-8.8 0-16 7.2-16 16v304c0 8.8 7.2 16 16 16h304c8.8 0 16-7.2 16-16V560c0-8.8-7.2-16-16-16zm-52 268H212V612h200v200zm452-268H560c-8.8 0-16 7.2-16 16v304c0 8.8 7.2 16 16 16h304c8.8 0 16-7.2 16-16V560c0-8.8-7.2-16-16-16zm-52 268H612V612h200v200z"
              />
            </svg>
          </span>
        </span>
      </div>
    </label>
  </div>
</div>
`;

exports[`renders components/segmented/demo/vertical.tsx extend context correctly 2`] = `[]`;

exports[`renders components/segmented/demo/with-icon.tsx extend context correctly 1`] = `
<div
  aria-label="segmented control"
  aria-orientation="horizontal"
  class="ant-segmented css-var-test-id"
  role="radiogroup"
  tabindex="0"
>
  <div
    class="ant-segmented-group"
  >
    <label
      class="ant-segmented-item ant-segmented-item-selected"
    >
      <input
        checked=""
        class="ant-segmented-item-input"
        name="test-id"
        type="radio"
      />
      <div
        class="ant-segmented-item-label"
      >
        <span
          class="ant-segmented-item-icon"
        >
          <span
            aria-label="bars"
            class="anticon anticon-bars"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="bars"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
            >
              <path
                d="M912 192H328c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h584c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zm0 284H328c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h584c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zm0 284H328c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h584c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zM104 228a56 56 0 10112 0 56 56 0 10-112 0zm0 284a56 56 0 10112 0 56 56 0 10-112 0zm0 284a56 56 0 10112 0 56 56 0 10-112 0z"
              />
            </svg>
          </span>
        </span>
        <span>
          List
        </span>
      </div>
    </label>
    <label
      class="ant-segmented-item"
    >
      <input
        class="ant-segmented-item-input"
        name="test-id"
        type="radio"
      />
      <div
        class="ant-segmented-item-label"
      >
        <span
          class="ant-segmented-item-icon"
        >
          <span
            aria-label="appstore"
            class="anticon anticon-appstore"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="appstore"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M464 144H160c-8.8 0-16 7.2-16 16v304c0 8.8 7.2 16 16 16h304c8.8 0 16-7.2 16-16V160c0-8.8-7.2-16-16-16zm-52 268H212V212h200v200zm452-268H560c-8.8 0-16 7.2-16 16v304c0 8.8 7.2 16 16 16h304c8.8 0 16-7.2 16-16V160c0-8.8-7.2-16-16-16zm-52 268H612V212h200v200zM464 544H160c-8.8 0-16 7.2-16 16v304c0 8.8 7.2 16 16 16h304c8.8 0 16-7.2 16-16V560c0-8.8-7.2-16-16-16zm-52 268H212V612h200v200zm452-268H560c-8.8 0-16 7.2-16 16v304c0 8.8 7.2 16 16 16h304c8.8 0 16-7.2 16-16V560c0-8.8-7.2-16-16-16zm-52 268H612V612h200v200z"
              />
            </svg>
          </span>
        </span>
        <span>
          Kanban
        </span>
      </div>
    </label>
  </div>
</div>
`;

exports[`renders components/segmented/demo/with-icon.tsx extend context correctly 2`] = `[]`;

exports[`renders components/segmented/demo/with-name.tsx extend context correctly 1`] = `
<div
  aria-label="segmented control"
  aria-orientation="horizontal"
  class="ant-segmented css-var-test-id"
  role="radiogroup"
  tabindex="0"
>
  <div
    class="ant-segmented-group"
  >
    <label
      class="ant-segmented-item ant-segmented-item-selected"
    >
      <input
        checked=""
        class="ant-segmented-item-input"
        name="group"
        type="radio"
      />
      <div
        class="ant-segmented-item-label"
        title="Daily"
      >
        Daily
      </div>
    </label>
    <label
      class="ant-segmented-item"
    >
      <input
        class="ant-segmented-item-input"
        name="group"
        type="radio"
      />
      <div
        class="ant-segmented-item-label"
        title="Weekly"
      >
        Weekly
      </div>
    </label>
    <label
      class="ant-segmented-item"
    >
      <input
        class="ant-segmented-item-input"
        name="group"
        type="radio"
      />
      <div
        class="ant-segmented-item-label"
        title="Monthly"
      >
        Monthly
      </div>
    </label>
    <label
      class="ant-segmented-item"
    >
      <input
        class="ant-segmented-item-input"
        name="group"
        type="radio"
      />
      <div
        class="ant-segmented-item-label"
        title="Quarterly"
      >
        Quarterly
      </div>
    </label>
    <label
      class="ant-segmented-item"
    >
      <input
        class="ant-segmented-item-input"
        name="group"
        type="radio"
      />
      <div
        class="ant-segmented-item-label"
        title="Yearly"
      >
        Yearly
      </div>
    </label>
  </div>
</div>
`;

exports[`renders components/segmented/demo/with-name.tsx extend context correctly 2`] = `[]`;
